# archaeal-sgrna-designer

./: CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
archaeal_sgrna/: __init__.py  designer.py  report.py  scoring.py  utils.py
examples/: basic_usage.py  mcrA_mcrB_example.fasta
tests/: test_designer.py
